--- a/project-file/css/style.css
+++ b/project-file/css/style.css
@@ -56,11 +56,18 @@ body{
 margin: 5px ; 	
 }
 
+#nav-list a:hover{
+	background : #FFF3DF ;
+}
+
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
   border: 1px solid #61122f;
 }
 
 .navbar-header button.navbar-toggle {
   clear: both;
-  margin-top: -30px;
+  position: relative;
+  top: -25px ;  
 }
+
+
