--- a/project-file/css/style.css
+++ b/project-file/css/style.css
@@ -99,4 +99,30 @@ margin: 5px ;
 		height: 508px ;
 	}
 } 
+@media (max-width: 767px) {
+	 #home-tiles {
+		width: 60% ; 
+	}
+}
+
+
+.container #albums-tile ,.container  #awards-tile ,.container  #concerts-tile {
+	width: 100% ;
+	height: 250px ;
+	padding: 0 ;
+	margin-bottom: 25px ;
+	margin-top: 45px ; 
+	position: relative ; 
+	background-color: white ;
+	border: 1px solid white ; 
+	overflow: hidden;  
+}
+#albums-tile:hover, #awards-tile:hover, #concerts-tile:hover {
+	box-shadow: 0 1px 5px 1px white ;
+}
+#albums-tile {
+	background: url('../images/album.jpg') no-repeat ;
+}
+
+
 
