--- a/project-file/css/style.css
+++ b/project-file/css/style.css
@@ -79,12 +79,60 @@ margin: 5px ;
 	padding: 0px ;
 	box-shadow: 0 5px 35px white ;
 }
+#home-tiles {
+	margin-top: 50px ; 
+}
+#albums-tile ,  #awards-tile , #concerts-tile {
+	height: 250px ;
+	padding: 0 ;
+	margin-bottom: 25px ;
+	margin-top: 45px ; 
+	position: relative ; 
+	background-color: white ;
+	border: 1px solid white ; 
+	overflow: hidden;  
+	margin: 0 auto 15px;
+
+}
+
+#albums-tile:hover, #awards-tile:hover, #concerts-tile:hover {
+	box-shadow: 0 1px 5px 1px white ;
+}
+
+#albums-tile {
+	background: url('../images/albums.png') no-repeat;
+	background-position: center; 
+}
+
+#awards-tile {
+	background: url('../images/awards.png') no-repeat;
+	background-position: center;
+}
+
+#concerts-tile {
+	background: url('../images/about.png') no-repeat;
+	background-position: center;
+}
+
+#albums-tile span ,  #awards-tile span , #concerts-tile span {
+	position: absolute;
+    bottom: 0;
+    width: 100% ;
+    right: 0;   
+	text-align: center;
+	background-color: #DC6B82 ;
+	opacity: .6 ;
+	font-size: 1.6em ;
+	color: #fff 
+}
+
 
 @media (min-width: 1200px) {
   .container .jumbotron{
   	background: url('../images/e_1200.png') no-repeat;
   	height: 794px ;
    }
+
 }
 
 @media (min-width: 992px) and (max-width: 1199px){
@@ -98,31 +146,18 @@ margin: 5px ;
 		background: url('../images/e_768.png') no-repeat;
 		height: 508px ;
 	}
+	#concerts-tile {
+		width: 60% ;
+	}
 } 
-@media (max-width: 767px) {
-	 #home-tiles {
-		width: 60% ; 
+
+@media (max-width: 767px)and (min-width: 450px) {
+	#home-tiles{
+		width: 67%;
 	}
 }
-
-
-.container #albums-tile ,.container  #awards-tile ,.container  #concerts-tile {
-	width: 100% ;
-	height: 250px ;
-	padding: 0 ;
-	margin-bottom: 25px ;
-	margin-top: 45px ; 
-	position: relative ; 
-	background-color: white ;
-	border: 1px solid white ; 
-	overflow: hidden;  
+@media (max-width: 449px) {
+	#home-tiles{
+		width: 400px ;
+	}
 }
-#albums-tile:hover, #awards-tile:hover, #concerts-tile:hover {
-	box-shadow: 0 1px 5px 1px white ;
-}
-#albums-tile {
-	background: url('../images/album.jpg') no-repeat ;
-}
-
-
-
