--- a/project-file/css/style.css
+++ b/project-file/css/style.css
@@ -139,19 +139,22 @@ margin: 5px ;
 }
 
 .photo-back{
-	width: 300px ;
+	width: 400px ;
+	padding: 0 ;
+	margin-top: 30px ;
 }
 
 .wraper {
 	float: left; 
 }
 
-.social {
-	margin-left: 50px ;
+.wra {
 	position: relative;
-	bottom: 30px;
 }
 
+.social {
+	margin-bottom: 15px ;
+}
 .social-title {
 	color: #EADC5E;
 	font-size: 20px ;
@@ -179,19 +182,20 @@ margin: 5px ;
 	opacity: 0.8; 
 }
 
-.ff {
-	margin-bottom: 10px ;
-}
-
-
 @media (min-width: 1200px) {
   .container .jumbotron{
   	background: url('../images/e_1200.png') no-repeat;
   	height: 794px ;
    }
 
+   .photo-back {
+   	margin-left: 67px ;
+   }
+
    .social{
-   	top: 60px ;
+   	position: relative;
+   	top: 70px ;
+   	margin-left: 40px ;
    }
 
 }
@@ -202,13 +206,16 @@ margin: 5px ;
 		height: 656px ;
 	}
 
-	.waraper {
-		text-align: center;
+	.photo-back{
+		margin-top: 30px ;
+		margin-left: 30px ;
 	}
 
 
    .social{
-   	top: 50px ;
+   	position: relative;
+   	top: 70px ;
+   	margin-left: 40px ;
    }
 
 }
@@ -222,17 +229,14 @@ margin: 5px ;
 	}
 
 	.photo-back {
-		background: url('../images/back2.png') no-repeat ;
-		background-position: center;
-		height: 133px ; 
-		width: 200px ;
-		margin-top: 30px ;
+		margin-top: 50px ;
+		margin-left: 50px ;
 	}
 
-	
-	.quote , .photo-back , .social {
-		text-align: center; 
+	.social {
+		margin-left: 240px ;
 	}
+
 } 
 
 @media (max-width: 767px)and (min-width: 450px) {
@@ -244,18 +248,11 @@ margin: 5px ;
 		text-align: center;
 	}
 
-	.wraper {
-		margin-bottom: 10px ;
-	}
-
 	.rights div {
 		font-size: 0.7em ;
 		opacity: 0.9;
 	}
 
-	.face-tile , .twitter-tile , .insta-tile , .youtube-tile {
-		margin-bottom: 15px ;
-	}	
 }
 @media (max-width: 449px) and (min-width: 380px) {
 	#home-tiles{
