--- a/project-file/css/style.css
+++ b/project-file/css/style.css
@@ -74,6 +74,25 @@ margin: 5px ;
   position: relative;
   top: -25px ;  
 }
+#exclu {
+	margin-top: 20px ;
+	width: 50%; 
+	opacity: .8;
+}
+.latest:hover {
+	background-color: #211E5B; 
+}
+.latest{
+	padding: 5px;
+	text-align: center;
+	font-size: 2em;
+    font-family: 'Poiret One', cursive;
+	margin-bottom: 20px ;
+	color: #F3EB9E ;
+	border: 1px solid white ;
+	box-shadow: 0px 0px  7px 2px white ;
+	border-radius: 5px;
+}
 
 .container .jumbotron {
 	margin-top: 20px ;
@@ -225,6 +244,9 @@ margin: 5px ;
 
 }
 @media (min-width: 768px) and (max-width: 991px) {
+	.latest{
+		font-size: 1.5em;
+	}
 	.container .jumbotron {
 		background: url('../images/e_768.png') no-repeat;
 		height: 508px ;
@@ -249,6 +271,10 @@ margin: 5px ;
 		width: 450px;
 	}
 
+	.latest{
+		font-size: 1.5em;
+	}
+
 	.panel-footer {
 		text-align: center;
 	}
@@ -265,6 +291,9 @@ margin: 5px ;
 
 }
 @media (max-width: 449px) and (min-width: 380px) {
+	.latest{
+		font-size: 1.5em;
+	}
 	#home-tiles{
 		width: 400px ;
 	}
@@ -276,6 +305,10 @@ margin: 5px ;
  	#home-tiles {
  		width: 300px ; 
  	}
+
+ 	.latest{
+		font-size: 1em;
+	}
 
  	#albums-tile ,  #awards-tile , #concerts-tile {
  		height: 200px ; 
